Fix contrast to validate in Lighthouse

--- a/src/components/Nav/style.scss
+++ b/src/components/Nav/style.scss
@@ -9,7 +9,7 @@
   margin: 0 12px;
   font-size: 1.8rem;
   text-decoration: none;
-  color: map-get($colors , gray500);
+  color: map-get($colors , gray600);
 
   &:hover {
     color: map-get($colors , gray700);
